--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -57,6 +57,10 @@
             <version>4.1.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
