--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -41,6 +41,10 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
